; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_common-data.c_store_common_data.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_common-data.c_store_common_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i32 }

@MyCData = common dso_local global %struct.TYPE_5__* null, align 8
@CDataUserInfo = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @store_common_data() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyCData, align 8
  %3 = icmp ne %struct.TYPE_5__* %2, null
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %16

5:                                                ; preds = %0
  %6 = call i32 @get_precise_time(i32 1000000)
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CDataUserInfo, i32 0, i32 0), align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyCData, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = call i32 @update_user_info_copy(i64 %9, %struct.TYPE_4__* @CDataUserInfo)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** @MyCData, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = add nsw i64 %13, 1
  %15 = call i32 @update_user_info_copy(i64 %14, %struct.TYPE_4__* @CDataUserInfo)
  store i32 1, i32* %1, align 4
  br label %16

16:                                               ; preds = %5, %4
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @get_precise_time(i32) #1

declare dso_local i32 @update_user_info_copy(i64, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
